<resources>
    <string name="app_name">ABC User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pickup">Pickup</string>
    <string name="drop">Drop-off</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="api_key">AIzaSyCebJr8QFqFjtgZB1f_InEfWWjPge7PLBE</string>
    <string name="enter_drop_location">enter_drop_location</string>
    <string name="No_Internet">No Internet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="cancel_booking">Cancel Ride</string>
    <string name="other_reason">other reason</string>
    <string name="cancel_trip">Cancel Ride</string>
    <string name="are_you_want_to_sure_to_logout">Are you want to sure to logout</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="confirm_pickup_location">Confirm Your PickUp Location</string>
    <string name="confirm_pick_up">Confirm PickUp</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="remarks">Remarks</string>
    <string name="reset">Reset Location</string>
    <string name="profile_overview">Profile Overview</string>
    <string name="cash">Cash</string>
    <string name="paytm">Paytm</string>
    <string name="please_rate_the_driver_now">Please rate the driver now.</string>
    <string name="your_ride_has_been_completed_successfully">Your ride has been completed successfully.</string>
    <string name="please_try_after_some_time">Please Try After Some Time</string>
    <string name="no_driver_found">No Driver Found</string>
    <string name="reset_location">Reset Location</string>
    <string name="rating">Rating</string>
    <string name="permission_not_granted">Location permission required</string>
    <string name="without_location_permission_this_application_can_not_work">Without location permission this application can not work</string>
    <string name="allow">ALLOW</string>

</resources>