<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationMap.Allowpermission">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp">

                <ImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_250sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ellispe1" />

                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <TextView
                android:text="@string/permission_not_granted"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_18ssp"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
               android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/without_location_permission_this_application_can_not_work"

                android:textSize="@dimen/_11ssp">

            </TextView>

            <TextView
                android:id="@+id/allow_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="@font/poppinsmedium"
                android:padding="@dimen/_10sdp"
                android:text="@string/allow"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>